--- a/django_web1/templates/app_user/login.html
+++ b/django_web1/templates/app_user/login.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+
 {% block head %}
 {% endblock head %}
 
@@ -15,7 +16,7 @@
 		<div class="login_form fr">
 			<div class="login_title clearfix">
 				<h1>用户登录</h1>
-				<a href="#">立即注册</a>
+				<a href="/user/register/">立即注册</a>
 			</div>
 			<div class="form_input">
 				<form>
