--- a/django_web1/templates/app_user/register.html
+++ b/django_web1/templates/app_user/register.html
@@ -2,7 +2,6 @@
 
 
 {% block head %}
-<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
 <script type="text/javascript" src="/static/js/register.js"></script>
 {% endblock head %}
 
@@ -17,10 +16,11 @@
 	<div class="r_con fr">
 		<div class="reg_title clearfix">
 			<h1>用户注册</h1>
-			<a href="#">登录</a>
+			<a href="/user/login/">登录</a>
 		</div>
 		<div class="reg_form clearfix">
-			<form>
+			<form id="reg_form" method="post" action="/user/register_handle/">
+				{% csrf_token %}
 			<ul>
 				<li>
 					<label>用户名:</label>
@@ -29,17 +29,17 @@
 				</li>
 				<li>
 					<label>密码:</label>
-					<input type="password" name="pwd" id="pwd">
+					<input type="password" name="user_pwd" id="pwd">
 					<span class="error_tip">提示信息</span>
 				</li>
 				<li>
 					<label>确认密码:</label>
-					<input type="password" name="cpwd" id="cpwd">
+					<input type="password" id="cpwd">
 					<span class="error_tip">提示信息</span>
 				</li>
 				<li>
 					<label>邮箱:</label>
-					<input type="text" name="email" id="email">
+					<input type="text" name="user_mail" id="email">
 					<span class="error_tip">提示信息</span>
 				</li>
 				<li class="agreement">
@@ -48,7 +48,7 @@
 					<span class="error_tip2">提示信息</span>
 				</li>
 				<li class="reg_sub">
-					<input type="submit" value="注 册" name="">
+					<input type="submit" value="注 册" />
 				</li>
 			</ul>
 			</form>
