--- a/django_web1/templates/base.html
+++ b/django_web1/templates/base.html
@@ -15,17 +15,22 @@
             <div class="header">
                 <div class="welcome fl">欢迎来到天天生鲜!</div>
                 <div class="fr">
-                    <div class="login_info fl">
-                        欢迎您：<em>张 山</em>
+                    {% if request.session.u_id%}
+                    <div class=" login_btn fl">
+                        欢迎您：<em>{{request.session.u_name}}</em>
+                        <span>|</span>
+                        <a href="/user/logout/">退出</a>
                     </div>
-                    <div class="login_btn fl">
+                    {% else %}
+                        <div class="login_btn fl">
                         <a href="/user/login/">登录</a>
                         <span>|</span>
                         <a href="/user/register/">注册</a>
                     </div>
+                    {% endif %}
                     <div class="user_link fl">
                         <span>|</span>
-                        <a href="/user/info/">用户中心</a>
+                        <a href="/user/">用户中心</a>
                         <span>|</span>
                         <a href="/cart/cart/">我的购物车</a>
                         <span>|</span>
@@ -35,15 +40,26 @@
             </div>
         </div>
 
-
         <div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
-		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
-		<div class="search_con fr">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
-		</div>
-	</div>
+            <a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
+
+            {% if request.session.is_dis %} {# 判断是否有session值 #}
+                <div class="search_con fl">
+                    <input type="text" class="input_text fl" name="" placeholder="搜索商品">
+                    <input type="button" class="input_btn fr" name="" value="搜索">
+                </div>
+                <div class="guest_cart fr">
+                    <a href="#" class="cart_name fl">我的购物车</a>
+                    <div class="goods_count fl" id="show_count">1</div>
+                </div>
+            {% else %}
+                <div class="sub_page_name fl"> &nbsp; | &nbsp;&nbsp;&nbsp; 用户中心</div>
+                <div class="search_con fr">
+                    <input type="text" class="input_text fl" name="" placeholder="搜索商品">
+                    <input type="button" class="input_btn fr" name="" value="搜索">
+                </div>
+            {% endif %}
+	    </div>
     {% endblock body_header %}
 
 
@@ -51,7 +67,7 @@
     {% endblock body_main %}
 
 
-    <div class="footer no-mp">
+    <div class="footer">
 		<div class="foot_link">
 			<a href="#">关于我们</a>
 			<span>|</span>
