--- a/django_web1/templates/app_user/user_center_info.html
+++ b/django_web1/templates/app_user/user_center_info.html
@@ -7,7 +7,7 @@
 		<div class="left_menu_con clearfix">
 			<h3>用户中心</h3>
 			<ul>
-				<li><a href="/user/info/" class="active">· 个人信息</a></li>
+				<li><a href="/user/" class="active">· 个人信息</a></li>
 				<li><a href="/user/order/">· 全部订单</a></li>
 				<li><a href="/user/site/">· 收货地址</a></li>
 			</ul>
@@ -16,9 +16,9 @@
 				<div class="info_con clearfix">
 				<h3 class="common_title2">基本信息</h3>
 						<ul class="user_info_list">
-							<li><span>用户名：</span>18210569700</li>
-							<li><span>联系方式：</span>18210569700</li>
-							<li><span>联系地址：</span>北京市昌平区</li>			
+							<li><span>用户名：</span>{{user.u_name}}</li>
+							<li><span>联系方式：</span>{{user.u_phone}}</li>
+							<li><span>联系地址：</span>{{user.u_address}}</li>
 						</ul>
 				</div>
 				
