--- a/django_web1/templates/app_user/user_center_order.html
+++ b/django_web1/templates/app_user/user_center_order.html
@@ -8,7 +8,7 @@
 		<div class="left_menu_con clearfix">
 			<h3>用户中心</h3>
 			<ul>
-				<li><a href="/user/info/">· 个人信息</a></li>
+				<li><a href="/user/">· 个人信息</a></li>
 				<li><a href="/user/order/" class="active">· 全部订单</a></li>
 				<li><a href="/user/site/">· 收货地址</a></li>
 			</ul>
