--- a/django_web1/templates/app_user/user_center_site.html
+++ b/django_web1/templates/app_user/user_center_site.html
@@ -1,13 +1,59 @@
 {% extends 'base.html' %}
 
+{% block head %}
+	<script>
+		$(function () {
+
+		    $('.info_submit').click(function () {
+		        // 收件人
+				var sReceive = $('#receive').val();
+				// 地址
+				var sAddress = $('#address').val();
+				// 手机号
+				var sPhone = $('#phone').val();
+				if (sReceive == '') {
+				    alert('收件人不允许为空');
+				    return;
+				}
+				if (sAddress == '') {
+				    alert('地址不允许为空');
+				    return;
+				}
+				if (sPhone == '') {
+				    alert('手机号不允许为空');
+				    return;
+				}
+//				if(!(/^1[34578]\d{9}$/.test(sPhone))){
+//					alert("手机号码有误，请重填");
+//					return;
+//				}
+				$.post('/user/site_handle/',
+					{'u_addressee': sReceive, 'u_address': sAddress, 'u_phone': sPhone},
+					function (data) {
+				    	// 地址
+				    	$('.site_con dd span').eq(0).html(data.user[0]);
+				    	// 收件人
+				    	$('.site_con dd span').eq(1).html('(' + data.user[1] + ' 收)');
+				    	// 手机号
+				    	$('.site_con dd span').eq(2).html(data.user[2]);
+
+				    	$('#receive').val('');
+						$('#address').val('');
+						$('#phone').val('');
+						$('#zip_code').val('');
+				});
+            });
+        });
+	</script>
+{% endblock head %}
+
 
 {% block body_main %}
-
 	<div class="main_con clearfix">
 		<div class="left_menu_con clearfix">
 			<h3>用户中心</h3>
 			<ul>
-				<li><a href="/user/info/">· 个人信息</a></li>
+				<li><a href="/user/">· 个人信息</a></li>
 				<li><a href="/user/order/">· 全部订单</a></li>
 				<li><a href="/user/site/" class="active">· 收货地址</a></li>
 			</ul>
@@ -17,30 +63,34 @@
 				<div class="site_con">
 					<dl>
 						<dt>当前地址：</dt>
-						<dd>北京市 海淀区 东北旺西路8号中关村软件园 （李思 收） 182****7528</dd>
-					</dl>					
+						<!--<dd>北京市 海淀区 东北旺西路8号中关村软件园 （李思 收） 182****7528</dd>-->
+						<dd>
+							<span>{{user.u_address}}</span>
+							<span>（{{user.u_addressee}}  收）  </span>
+							<span>{{user.u_phone}}</span>
+						</dd>
+					</dl>
 				</div>
 				<h3 class="common_title2">编辑地址</h3>
 				<div class="site_con">
 					<form>
 						<div class="form_group">
-							<label>收件人：</label>
-							<input type="text" name="">
+							<label for="receive">收件人：</label>
+							<input id="receive" type="text" name="u_addressee">
 						</div>
 						<div class="form_group form_group2">
-							<label>详细地址：</label>
-							<textarea class="site_area"></textarea>
+							<label for="address">详细地址：</label>
+							<textarea id="address" name="u_address" class="site_area"></textarea>
 						</div>
 						<div class="form_group">
-							<label>邮编：</label>
-							<input type="text" name="">
+							<label for="zip_code">邮编：</label>
+							<input id="zip_code" type="text" name="u_code">
 						</div>
 						<div class="form_group">
-							<label>手机：</label>
-							<input type="text" name="">
+							<label for="phone">手机：</label>
+							<input id="phone" type="text" name="u_phone">
 						</div>
-
-						<input type="submit" name="" value="提交" class="info_submit">
+						<input type="button" value="提交" class="info_submit">
 					</form>
 				</div>
 		</div>
