--- a/django_web1/templates/app_goods/detail.html
+++ b/django_web1/templates/app_goods/detail.html
@@ -1,5 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'app_goods/base.html' %}
+
 {% block head %}
+	{{ block.super }}
 {% endblock head %}
 
 
@@ -10,12 +12,9 @@
 				<h1>全部商品分类</h1>	
 				<span></span>			
 				<ul class="subnav">
-					<li><a href="#" class="fruit">新鲜水果</a></li>
-					<li><a href="#" class="seafood">海鲜水产</a></li>
-					<li><a href="#" class="meet">猪牛羊肉</a></li>
-					<li><a href="#" class="egg">禽类蛋品</a></li>
-					<li><a href="#" class="vegetables">新鲜蔬菜</a></li>
-					<li><a href="#" class="ice">速冻食品</a></li>
+					{% for type in t_list %}
+					<li><a href="/goods/list/{{ type.id }}" class="fruit">{{ type.g_title }}</a></li>
+					{% endfor %}
 				</ul>
 			</div>
 			<ul class="navlist fl">
@@ -31,20 +30,20 @@
 	<div class="breadcrumb">
 		<a href="">全部分类</a>
 		<span>></span>
-		<a href="">新鲜水果</a>
+		<a href="/goods/list/{{t_name.g_type_id}}/">{{ t_name.g_type }}</a>
 		<span>></span>
-		<a href="{{request.path}}">商品详情</a>
+		<a href="##">商品详情</a>
 	</div>
 
 	<div class="goods_detail_con clearfix">
 		<div class="goods_detail_pic fl"><img src="/static/images/goods_detail.jpg"></div>
 
 		<div class="goods_detail_list fr">
-			<h3>大兴大棚草莓</h3>
-			<p>草莓浆果柔软多汁，味美爽口，适合速冻保鲜贮藏。草莓速冻后，可以保持原有的色、香、味，既便于贮藏，又便于外销。</p>
+			<h3>{{ goods.g_title }}</h3>
+			<p>{{ goods.g_subtitle }}</p>
 			<div class="prize_bar">
-				<span class="show_pirze">¥<em>16.80</em></span>
-				<span class="show_unit">单  位：500g</span>
+				<span class="show_pirze">¥<em>{{ goods.g_price }}</em></span>
+				<span class="show_unit">单  位：{{ goods.g_unit }}</span>
 			</div>
 			<div class="goods_num clearfix">
 				<div class="num_name fl">数 量：</div>
@@ -67,16 +66,13 @@
 			<div class="new_goods">
 				<h3>新品推荐</h3>
 				<ul>
-					<li>
-						<a href="#"><img src="images/goods/goods001.jpg"></a>
-						<h4><a href="#">进口柠檬</a></h4>
-						<div class="prize">￥3.90</div>
-					</li>
-					<li>
-						<a href="#"><img src="images/goods/goods002.jpg"></a>
-						<h4><a href="#">玫瑰香葡萄</a></h4>
-						<div class="prize">￥16.80</div>
-					</li>
+					{% for goods in n_list %}
+						<li>
+                            <a href="/detail/{{goods.id}}"><img src="/static/{{ goods.g_pic }}"></a>
+                            <h4><a href="/detail/{{goods.id}}">{{ goods.g_title }}</a></h4>
+                            <div class="prize">￥{{ goods.g_price }}</div>
+                        </li>
+					{% endfor %}
 				</ul>
 			</div>
 		</div>
@@ -90,7 +86,7 @@
 			<div class="tab_content">
 				<dl>
 					<dt>商品详情：</dt>
-					<dd>草莓采摘园位于北京大兴区 庞各庄镇四各庄村 ，每年1月-6月面向北京以及周围城市提供新鲜草莓采摘和精品礼盒装草莓，草莓品种多样丰富，个大香甜。所有草莓均严格按照有机标准培育，不使用任何化肥和农药。草莓在采摘期间免洗可以直接食用。欢迎喜欢草莓的市民前来采摘，也欢迎各大单位选购精品有机草莓礼盒，有机草莓礼盒是亲朋馈赠、福利送礼的最佳选择。 </dd>
+					<dd>{{ goods.g_content|safe }}</dd>
 				</dl>
 			</div>
 
