--- a/django_web1/templates/app_goods/index.html
+++ b/django_web1/templates/app_goods/index.html
@@ -53,7 +53,7 @@
 						<a href="/detail/{{ good.id }}/">{{ good.g_title|truncatechars:15 }}</a>
 					{% endfor %}
 				</div>
-				<a href="/list/{{ dict.t_list.id }}/1" class="goods_more fr" id="fruit_more">查看更多 ></a>
+				<a href="/list/{{ dict.t_list.id }}/1?order=0" class="goods_more fr" id="fruit_more">查看更多 ></a>
 			</div>
 
 			<div class="goods_con clearfix">
