--- a/django_web1/templates/app_goods/list.html
+++ b/django_web1/templates/app_goods/list.html
@@ -1,63 +1,27 @@
-{% extends 'base.html' %}
+{% extends 'app_goods/base.html' %}
 
 {% block head %}
 	{{ block.super }}
-
 {% endblock head %}
 
-{% block body_main %}
-	<div class="navbar_con">
-		<div class="navbar clearfix">
-			<div class="subnav_con fl">
-				<h1>全部商品分类</h1>	
-				<span></span>			
-				<ul class="subnav">
-					{% for type in t_all %}
-						<li><a href="/list/{{ type.id }}/1" class="fruit">{{ type.g_title }}</a></li>
-					{% endfor %}
-				</ul>
-			</div>
-			<ul class="navlist fl">
-				<li><a href="/">首页</a></li>
-				<li class="interval">|</li>
-				<li><a href="/">手机生鲜</a></li>
-				<li class="interval">|</li>
-				<li><a href="/">抽奖</a></li>
-			</ul>
-		</div>
-	</div>
-
+{% block goods_nav %}
 	<div class="breadcrumb">
 		<a href="">全部分类</a>
 		<span>></span>
 		<a href="##">{{ t_list.g_title }}</a>
 	</div>
+{% endblock goods_nav %}
 
-	<div class="main_wrap clearfix">
-		<div class="l_wrap fl clearfix">
-			<div class="new_goods">
-				<h3>新品推荐</h3>
-				<ul>
-					{% for n in n_list %}
-						<li>
-							<a href="/detail/{{ n.id }}"><img src="/static/{{ n.g_pic }}"></a>
-							<h4><a href="#">{{ n.g_title }}</a></h4>
-							<div class="prize">￥{{ n.g_price }}</div>
-						</li>
-					{% endfor %}
-				</ul>
-			</div>
+{% block goods_detail %}
+	<div class="r_wrap fr clearfix">
+		<div class="sort_bar">
+			<a href="/list/{{ t_list.id }}/1?order=0" {% if order == '0' %} class="active" {% endif %}>默认</a>
+			<a href="/list/{{ t_list.id }}/1?order=1&desc={% if desc == '1' %}0{% else %}1{% endif %}" {% if order == '1' %} class="active" {% endif %}>价格</a>
+			<a href="/list/{{ t_list.id }}/1?order=2" {% if order == '2' %} class="active" {% endif %}>人气</a>
 		</div>
 
-		<div class="r_wrap fr clearfix">
-			<div class="sort_bar">
-				<a href="##" class="active">默认</a>
-				<a href="#">价格</a>
-				<a href="#">人气</a>
-			</div>
-
-			<ul class="goods_type_list clearfix">
-				{% for goods in g_list %}
+		<ul class="goods_type_list clearfix">
+			{% for goods in page %}
 				<li>
 					<a href="/detail/{{ goods.id }}"><img src="/static/{{ goods.g_pic }}"></a>
 					<h4><a href="/detail/{{ goods.id }}">{{ goods.g_title }}</a></h4>
@@ -67,31 +31,32 @@
 						<a href="##" class="add_goods" title="加入购物车"></a>
 					</div>
 				</li>
-				{% endfor %}
-			</ul>
-			<div class="pagenation">
-				<a href="/list/{{ t_list.id }}/1">首页</a>
-				{% if page.has_previous %}
-					<a href="/list/{{ t_list.id }}/{{ page.number|add:-1 }}">&lt;上一页</a>
-				{% else %}
-					<a>&lt;上一页</a>
-				{% endif %}
+			{% endfor %}
+		</ul>
+		<div class="pagenation">
+			{% if page.has_previous %}
+				<a href="/list/{{ t_list.id }}/1?order={{ order }}&desc={{desc}}">首页</a>
+				<a href="/list/{{ t_list.id }}/{{ page.number|add:-1 }}?order={{ order }}&desc={{desc}}">&lt;上一页</a>
+			{% else %}
+				<a>首页</a>
+				<a>&lt;上一页</a>
+			{% endif %}
 
-				{% for p_index in page.paginator.page_range %}
-					{% if p_index == page.number %}
-						<a href="##" class="active">{{ p_index }}</a>
-					{% else %}
-						<a href="/list/{{ t_list.id }}/{{ p_index }}" >{{ p_index }}</a>
-					{% endif %}
-				{% endfor %}
-
-				{% if page.has_next %}
-					<a href="/list/{{ t_list.id }}/{{ page.number|add:1 }}">下一页&gt;</a>
+			{% for p_index in page_range %}
+				{% if p_index == page.number %}
+					<a href="##" class="active">{{ p_index }}</a>
 				{% else %}
-					<a>下一页&gt;</a>
+					<a href="/list/{{ t_list.id }}/{{ p_index }}?order={{ order }}&desc={{desc}}" >{{ p_index }}</a>
 				{% endif %}
-				<a href="/list/{{ t_list.id }}/{{ page.paginator.num_pages }}">尾页</a>
-			</div>
+			{% endfor %}
+
+			{% if page.has_next %}
+				<a href="/list/{{ t_list.id }}/{{ page.number|add:1 }}?order={{ order }}&desc={{desc}}">下一页&gt;</a>
+				<a href="/list/{{ t_list.id }}/{{ page.paginator.num_pages }}?order={{ order }}&desc={{desc}}">尾页</a>
+			{% else %}
+				<a>下一页&gt;</a>
+				<a>尾页</a>
+			{% endif %}
 		</div>
 	</div>
-{% endblock body_main %}
+{% endblock goods_detail %}
