--- a/django_web1/templates/app_user/user_center_info.html
+++ b/django_web1/templates/app_user/user_center_info.html
@@ -30,7 +30,7 @@
                         <div class="operate">
                             <span class="prize">￥{{ goods.g_price }}</span>
                             <span class="unit">{{ goods.g_price }}/{{ goods.g_unit }}</span>
-                            <a href="#" class="add_goods" title="加入购物车"></a>
+                            <a href="/cart/" class="add_goods" title="加入购物车"></a>
                         </div>
 					</li>
 					{% endfor %}
