--- a/django_web1/templates/base.html
+++ b/django_web1/templates/base.html
@@ -43,7 +43,7 @@
                         <span>|</span>
                         <a href="/user/">用户中心</a>
                         <span>|</span>
-                        <a href="/cart/cart/">我的购物车</a>
+                        <a href="/cart/">我的购物车</a>
                         <span>|</span>
                         <a href="/user/order/">我的订单</a>
                     </div>
@@ -62,11 +62,17 @@
                     </form>
                 </div>
                 <div class="guest_cart fr">
-                    <a href="#" class="cart_name fl">我的购物车</a>
+                    <a href="/cart/" class="cart_name fl">我的购物车</a>
                     <div class="goods_count fl" id="show_count">1</div>
                 </div>
             {% else %}
+
+                {% if is_cart|default:'0' == '1' %}
+                <div class="sub_page_name fl"> &nbsp; | &nbsp;&nbsp;&nbsp; 购物车</div>
+                {% else %}
                 <div class="sub_page_name fl"> &nbsp; | &nbsp;&nbsp;&nbsp; 用户中心</div>
+                {% endif %}
+
                 <div class="search_con fr">
                     <form action="/search/" method="get" target="_blank">
                         <input type="text" class="input_text fl" name="q" placeholder="搜索商品">
@@ -78,8 +84,7 @@
     {% endblock body_header %}
 
 
-    {% block body_main %}
-    {% endblock body_main %}
+    {% block body_main %}{% endblock body_main %}
 
 
     <div class="footer">
