--- a/django_web1/templates/app_goods/list.html
+++ b/django_web1/templates/app_goods/list.html
@@ -2,6 +2,55 @@
 
 {% block head %}
 	{{ block.super }}
+
+	<script>
+
+		// 加入购物车
+		function addCart(gid) {
+			// 判断用户是否登录
+			$.get('/user/is_login', function (data) {
+				if (data.is_login) {  // 已经登录 data.is_login = 1
+					// 将当前商品添加到购物车中
+					$.get('/cart/add/', {'g_id': gid}, function (data) {
+						if (data.is_add) {  // 添加成功
+						    // 获取小圆点div位置
+							var $add_x = $('.add_goods').offset().top;
+							var $add_y = $('.add_goods').offset().left;
+
+							// 获取小圆点需要到的地方位置
+							var $to_x = $('#show_count').offset().top;
+							var $to_y = $('#show_count').offset().left;
+
+							// 设置小圆点的css样式，并让小圆点显示出来
+							$(".add_jump").css({'left': $add_y + 80, 'top': $add_x + 10, 'display': 'block'});
+							// 小圆点执行动画
+							$(".add_jump").stop().animate({
+								'left': $to_y + 7,
+								'top': $to_x + 7},
+								"fast", function() {
+									// 小圆点淡出动画执行后，执行回调函数，改变购物车中的数量
+									$(".add_jump").fadeOut('fast',function(){
+										// 设置购物车中商品数量
+										$.get('/cart/count/', function (data) {
+											if (data.count != '0') {
+												$('#show_count').html(data.count);
+											}
+										});
+									});
+							});
+						}
+						else {
+						    alert('添加失败');
+						}
+                    });
+				}
+				else {
+				    window.location.href = '/user/login/';
+				}
+            });
+        }
+	</script>
+
 {% endblock head %}
 
 {% block goods_nav %}
@@ -28,7 +77,7 @@
 					<div class="operate">
 						<span class="prize">￥{{ goods.g_price }}</span>
 						<span class="unit">{{ goods.g_price }}/{{ goods.g_unit }}</span>
-						<a href="##" class="add_goods" title="加入购物车"></a>
+						<a href="javascript:addCart({{ goods.id }});" class="add_goods" title="加入购物车"></a>
 					</div>
 				</li>
 			{% endfor %}
@@ -59,4 +108,5 @@
 			{% endif %}
 		</div>
 	</div>
+	<div class="add_jump"></div>
 {% endblock goods_detail %}
