--- a/django_web1/templates/app_user/user_center_info.html
+++ b/django_web1/templates/app_user/user_center_info.html
@@ -1,5 +1,24 @@
 {% extends 'base.html' %}
 
+{% block head %}
+	<script>
+
+		// 加入购物车
+		function addCart(gid) {
+
+		    // 因为已经在用户中心了，只有登录了才能进来，所以不需要在判断是否登录，直接可以将商品加入购物车中
+			$.get('/cart/add/',{'g_id': gid}, function (data) {
+				if (data.is_add) {  // 添加成功
+				    alert('添加成功，您稍后可以在购物车中查看到该商品');
+				}
+				else {
+				    alert('添加失败');
+				}
+            });
+        }
+	</script>
+{% endblock head %}
+
 {% block body_main %}
     <div class="main_con clearfix">
         <div class="left_menu_con clearfix">
@@ -30,7 +49,7 @@
                         <div class="operate">
                             <span class="prize">￥{{ goods.g_price }}</span>
                             <span class="unit">{{ goods.g_price }}/{{ goods.g_unit }}</span>
-                            <a href="/cart/" class="add_goods" title="加入购物车"></a>
+                            <a href="javascript:addCart({{ goods.id }});" class="add_goods" title="加入购物车"></a>
                         </div>
 					</li>
 					{% endfor %}
