完善购物车展示页面

--- a/django_web1/templates/app_cart/cart.html
+++ b/django_web1/templates/app_cart/cart.html
@@ -3,26 +3,18 @@
 {% block head %}
 	<script>
 		$(function () {
-			$('.num_show').blur(function () {
-				var iVal = parseInt($(this).val());  // 获取商品数量
-				var iStock = parseInt($('#stock').val());  // 商品库存
-				var iPrice = $('.col05').text();
+			var iStock = parseInt($('#stock').val());  // 商品库存
+			var iTotal = 0;  // 总计
 
-				if (iVal < 1 ) {
-				    iVal = 1;
-				}
-				else if (iVal > iStock) {
-				    iVal = iStock;
-				}
-				else if (isNaN(iVal)) {
-				    iVal = 1;
-				}
-
-				$('.num_show').val(iVal);  // 重新赋值数量
+			// 循环遍历所有的商品ul
+			$('.cart_list_td').each(function () {
+				var iPrice = parseFloat($('.col05').text());  // 获取当前商品的单价
+				var iNum = parseInt($('.num_show').val());  // 获取当前商品数量
+				alert(iPrice);
+				alert(iNum);
+				var iSubTotal = iPrice * iNum;  // 该商品小计
+				$('.col07').text(iSubTotal.toFixed(2));  // 设置该商品小计，保留2位小数
             });
-
-			// 加入购物车
-
         });
 	</script>
 {% endblock head %}
@@ -37,16 +29,18 @@
 		<li class="col05">小计</li>
 		<li class="col06">操作</li>
 	</ul>
+
+	{% for cart in carts %}
 	<ul class="cart_list_td clearfix">
 		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="images/goods/goods012.jpg"></li>
-		<li class="col03">奇异果<br><em>25.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">25.80元</li>
+		<li class="col02"><img src="/static/{{ cart.goods.g_pic }}"></li>
+		<li class="col03">{{ cart.goods.g_title }}<br><em>{{ cart.goods.g_price}}/{{ cart.goods.g_unit }}</em></li>
+		<li class="col04">{{ cart.goods.g_unit }}</li>
+		<li class="col05">{{ cart.goods.g_price }}/li>
 		<li class="col06">
 			<div class="num_add">
 				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">
+				<input type="text" class="num_show fl" value="{{ cart.count }}">
 				<input type="hidden" id="stock">
 				<a href="javascript:;" class="minus fl">-</a>	
 			</div>
@@ -54,24 +48,7 @@
 		<li class="col07">25.80元</li>
 		<li class="col08"><a href="javascript:;">删除</a></li>
 	</ul>
-
-	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="images/goods/goods003.jpg"></li>
-		<li class="col03">大兴大棚草莓<br><em>16.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">16.80元</li>
-		<li class="col06">
-			<div class="num_add">
-				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">	
-				<a href="javascript:;" class="minus fl">-</a>	
-			</div>
-		</li>
-		<li class="col07">16.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
-	</ul>
-	
+	{% endfor %}
 
 	<ul class="settlements">
 		<li class="col01"><input type="checkbox" name="" checked=""></li>
