--- a/django_web1/templates/app_cart/cart.html
+++ b/django_web1/templates/app_cart/cart.html
@@ -3,24 +3,174 @@
 {% block head %}
 	<script>
 		$(function () {
-			var iStock = parseInt($('#stock').val());  // 商品库存
-			var iTotal = 0;  // 总计
+
+			var iTotal = 0;  // 商品总计
 
 			// 循环遍历所有的商品ul
 			$('.cart_list_td').each(function () {
-				var iPrice = parseFloat($('.col05').text());  // 获取当前商品的单价
-				var iNum = parseInt($('.num_show').val());  // 获取当前商品数量
-				alert(iPrice);
-				alert(iNum);
+
+				var iPrice = parseFloat($(this).children('.col05').text());  // 获取当前商品的单价
+				var iNum = parseInt($(this).find($('.num_show')).val());  // 获取当前商品数量
 				var iSubTotal = iPrice * iNum;  // 该商品小计
-				$('.col07').text(iSubTotal.toFixed(2));  // 设置该商品小计，保留2位小数
+				$(this).find($('.col07')).text(iSubTotal.toFixed(2) + '元');  // 设置该商品小计，保留2位小数
+				iTotal += iSubTotal;  // 商品总价计算
+				$('.settlements em').text(iTotal);  // 赋值总价
+				$('.settlements b').text($(':checked').not('#chb_all').length);  // 设置选中的商品个数
+
+
+				// 全选与反选复选框
+				$("#chb_all").click(function(){
+				    var isChecked = $(this).prop("checked");
+				    $("input[type='checkbox']").prop("checked", isChecked);
+					$('.settlements b').text($(':checked').not('#chb_all').length);
+				});
+
+				// 点击当前复选框的操作
+				$(this).children('.col01').find('input').click(function() {
+
+					// var isChecked = $(this).prop("checked");
+				    // $(this).prop("checked", isChecked);
+					// if (!$(this).isChecked) {
+					// 	// alert(1);
+					// 	$(this).removeAttr('checked');
+					// 	// $(this).prop("checked");
+					// 	// console.log('1');
+					//
+					// 	// console.log($(this).attr('name','12'));
+					// }
+					// if ($(this).isChecked){
+					// 	$(this).prop('checked', 'checked')
+					// }
+					// else {
+					// 	// alert('2');
+					//
+					// }
+					$('.settlements b').text($(':checked').not('#chb_all').length);
+				});
+
+
+				// 输入框用户填写具体商品数量
+				$(this).find('.num_show').blur(function () {
+				    var iTotal = 0;
+				    var iNum = parseInt($(this).val());  // 当前数量
+					var iStock = $(this).nextAll('.stock').val();  // 当前商品库存
+
+					// 调用功能函数进行校验，得到的数量就是合格的
+					var ig_Num = fnCheckNum(iNum, iStock);
+					var ig_id = $(this).nextAll('.g_id').val();  // 当前商品id
+
+					// 调用功能函数进行ajax请求
+					fnHandleAjax(ig_id, ig_Num);
+
+					$(this).val(ig_Num);  // 重新赋值商品数量
+					var iSubTotal = iPrice * ig_Num;  // 该商品小计
+					$(this).parents('.col06').next().text(iSubTotal.toFixed(2) + '元');  // 商品小计
+                });
+
+				// 点击+ 让数量+1
+				$(this).find('.add').click(function () {
+				    var iNum = parseInt($(this).nextAll('.num_show').val());  // 当前文本框中数量
+					var iStock = parseInt($(this).nextAll('.stock').val());  // 当前商品库存
+					var ig_id = $(this).nextAll('.g_id').val();  // 当前商品id
+					iNum++;
+					var ig_Num = fnCheckNum(iNum, iStock);  // 校验通过的商品数量
+
+					// ajax请求改变商品数量
+					fnHandleAjax(ig_id, ig_Num);
+
+					$(this).nextAll('.num_show').val(ig_Num);  // 重新赋值文本框数量
+					var iSubTotal = iPrice * ig_Num;  // 该商品小计
+					$(this).parents('.col06').next().text(iSubTotal.toFixed(2) + '元')
+                });
+
+				// 点击- 让数量-1
+				$(this).find('.minus').click(function () {
+					var iNum = parseInt($(this).prevAll('.num_show').val());  // 当前文本框中数量
+					var iStock = parseInt($(this).prevAll('.stock').val());  // 当前商品库存
+					var ig_id = $(this).prevAll('.g_id').val();  // 当前商品id
+					iNum--;
+					var ig_Num = fnCheckNum(iNum, iStock);  // 校验通过的商品数量
+
+					// ajax请求改变商品数量
+					fnHandleAjax(ig_id, ig_Num);
+
+					$(this).prevAll('.num_show').val(ig_Num);  // 重新赋值文本框数量
+					var iSubTotal = iPrice * ig_Num;  // 该商品小计
+					$(this).parents('.col06').next().text(iSubTotal.toFixed(2) + '元')
+                });
+
+
+				// 删除当前购物车对象所在记录
+				$(this).find('.delete ').click(function() {
+					var cart_id = $(this).next().val();  // 获取当前购物车对象的id
+					$.get('/cart/delete/', {'cart_id': cart_id}, function (data) {
+						if (data.is_delete == '1') {
+							alert('删除成功');
+							window.location.href = '/cart/';
+						}
+					});
+				});
             });
+
+			/**
+			 * 删除该商品
+			 * @param  {int} cart_id 购物车id
+			 * @return {[type]}         [description]
+			 */
+			function fnRemove(cart_id) {
+				alert(1);
+				// $.get('/cart/delete/', {'cart_id': cart_id}, function (data) {
+				// 	if (data.is_delete == '1') {
+				// 		alert('删除成功');
+				// 	}
+				// });
+			}
+
+
+			/**
+			 * 功能函数判断用户输入的商品数量是否合格
+			 * @param  {int} iNum   用户填写的商品数量
+			 * @param  {int} iStock 该商品库存
+			 * @return {int}        格式正确的商品数量
+			 */
+			function fnCheckNum(iNum, iStock) {
+				if (iNum < 1) {
+					iNum = 1;
+				}
+				else if (iNum > iStock) {
+					iNum = iStock;
+				}
+				else if (isNaN(iNum)) {
+					iNum = 1;
+				}
+				return iNum;
+			}
+
+
+			/**
+			 * ajax请求函数
+			 * @param  {int} g_id  商品id
+			 * @param  {int} g_num 商品数量
+			 * @return {[type]}       [description]
+			 */
+			function fnHandleAjax(g_id, g_num) {
+				//  将重新得到的商品数量传到服务器中进行更改，更改成功在重新再浏览器中显示
+				$.get('/cart/handle/', {'g_id': g_id, 'g_num': g_num}, function (data) {
+					if (data.result == '1') {
+						$('.settlements em').text(data.total);  // 商品总价
+//                            $(this).val(iNum);  // 重新赋值商品数量
+						// var iSubTotal = iPrice * g_num;  // 该商品小计
+						// $(this).parents('.col06').next().text(iSubTotal.toFixed(2) + '元');  // 商品小计
+					}
+				});
+			}
+
         });
 	</script>
 {% endblock head %}
 
 {% block body_main %}
-	<div class="total_count">全部商品<em>2</em>件</div>	
+	<div class="total_count">全部商品<em>{{ carts.count }}</em>件</div>
 	<ul class="cart_list_th clearfix">
 		<li class="col01">商品名称</li>
 		<li class="col02">商品单位</li>
@@ -32,26 +182,29 @@
 
 	{% for cart in carts %}
 	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="/static/{{ cart.goods.g_pic }}"></li>
+		<li class="col01"><input type="checkbox" name="" checked="checked"></li>
+		<li class="col02"><a href="/detail/{{ cart.goods_id }}/"><img src="/static/{{ cart.goods.g_pic }}"></a></li>
 		<li class="col03">{{ cart.goods.g_title }}<br><em>{{ cart.goods.g_price}}/{{ cart.goods.g_unit }}</em></li>
 		<li class="col04">{{ cart.goods.g_unit }}</li>
-		<li class="col05">{{ cart.goods.g_price }}/li>
+		<li class="col05">{{ cart.goods.g_price }}元</li>
 		<li class="col06">
 			<div class="num_add">
 				<a href="javascript:;" class="add fl">+</a>
 				<input type="text" class="num_show fl" value="{{ cart.count }}">
-				<input type="hidden" id="stock">
-				<a href="javascript:;" class="minus fl">-</a>	
+				<input type="hidden" class="stock" value="{{ cart.goods.g_stock }}">
+				<input type="hidden" class="g_id" value="{{ cart.goods_id }}">
+				<a href="javascript:;" class="minus fl">-</a>
 			</div>
 		</li>
 		<li class="col07">25.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
+		<li class="col08">
+			<a href="javascript:;" class="delete">删除</a><input type="hidden" value="{{ cart.id }}">
+		</li>
 	</ul>
 	{% endfor %}
 
 	<ul class="settlements">
-		<li class="col01"><input type="checkbox" name="" checked=""></li>
+		<li class="col01"><input type="checkbox" id="chb_all" checked="checked"></li>
 		<li class="col02">全选</li>
 		<li class="col03">合计(不含运费)：<span>¥</span><em>42.60</em><br>共计<b>2</b>件商品</li>
 		<li class="col04"><a href="../place_order.html">去结算</a></li>
