--- a/django_web1/templates/app_user/user_center_order.html
+++ b/django_web1/templates/app_user/user_center_order.html
@@ -1,5 +1,18 @@
 {% extends 'base.html' %}
 
+{% block head %}
+<script>
+	$(function () {
+		$('.col04').each(
+		    function () {
+				var iCount = parseInt($(this).prev().text());  // 商品数量
+				var fPrice = parseFloat($(this).prevAll('.col02').find('span').text());  // 商品单价
+				$(this).text((iCount * fPrice).toFixed(2) + '元');  // 商品小计
+            }
+		);
+    });
+</script>
+{% endblock head %}
 
 {% block body_main %}
 
@@ -15,73 +28,61 @@
 		</div>
 		<div class="right_content clearfix">
 				<h3 class="common_title2">全部订单</h3>
-				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">未支付</li>		
-				</ul>
 
-				<table class="order_list_table w980">
-					<tbody>
-						<tr>
-							<td width="55%">
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-							</td>
-							<td width="15%">33.60元</td>
-							<td width="15%">待付款</td>
-							<td width="15%"><a href="#" class="oper_btn">去付款</a></td>
-						</tr>
-					</tbody>
-				</table>
-				
-				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">已支付</li>			
-				</ul>
-				<table class="order_list_table w980">
-					<tbody>
-						<tr>
-							<td width="55%">
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="/static/images/goods02.jpg"></li>
-									<li class="col02">嘎啦苹果嘎啦苹果<em>11.80元/500g</em></li>	
-									<li class="col03">1</li>
-									<li class="col04">11.80元</li>	
-								</ul>
-							</td>
-							<td width="15%">33.60元</td>
-							<td width="15%">已付款</td>
-							<td width="15%"><a href="#" class="oper_btn">查看物流</a></td>
-						</tr>
-					</tbody>
-				</table>
+				{% for order in order_page %}
+                    <ul class="order_list_th w978 clearfix">
+                        <li class="col01">{{ order.order_date }}</li>
+                        <li class="col02">订单号：{{ order.order_id }}</li>
+                        <li class="col02 stress">{% if order.state == 0 %}未支付{% else %}已支付{% endif %}</li>
+                    </ul>
+                    <table class="order_list_table w980">
+                        <tbody>
+                            <tr>
+                                <td width="55%">
+									{% for detail in order.orderdetail_set.all %}
+                                        <ul class="order_goods_list clearfix">
+                                            <li class="col01"><img src="/static/{{ detail.goods.g_pic }}"></li>
+                                            <li class="col02">
+												{{ detail.goods.g_title|truncatechars:15  }}
+												<em><span>{{ detail.goods.g_price }}</span>元/{{ detail.goods.g_unit }}</em>
+											</li>
+                                            <li class="col03">{{ detail.count }}</li>
+                                            <li class="col04">0元</li>
+                                        </ul>
+									{% endfor %}
+                                </td>
+                                <td width="15%">{{ order.total }}元</td>
+
+								{% if order.state == 0 %}
+                                	<td width="15%">待付款</td>
+                                	<td width="15%"><a href="#" class="oper_btn">去付款</a></td>
+								{% else %}
+                                    <td width="15%">待付款</td>
+                                    <td width="15%"><a href="#" class="oper_btn">去付款</a></td>
+								{% endif %}
+                            </tr>
+                        </tbody>
+                    </table>
+				{% endfor %}
 
 				<div class="pagenation">
-					<a href="#"><上一页</a>
-					<a href="#" class="active">1</a>
-					<a href="#">2</a>
-					<a href="#">3</a>
-					<a href="#">4</a>
-					<a href="#">5</a>
-					<a href="#">下一页></a>
+					{% if order_page.has_previous%}
+						<a href="?p_index=1">首页</a>
+						<a href="?p_index={{ order_page.number|add:-1 }}">$lt;上一页</a>
+					{% endif %}
+
+					{% for p_index in range_list %}
+						{% if p_index = order_page.number %}
+                        	<a href="#" class="active">{{ p_index }}</a>
+                        {% else %}
+							<a href="?p_index={{ p_index }}">{{ p_index }}</a>
+						{% endif %}
+					{% endfor %}
+
+					{% if order_page.has_next%}
+						<a href="?p_index={{ order_page.number|add:1 }}">下一页$gt;</a>
+						<a href="?p_index={{ order_page.paginator.num_pages }}">尾页</a>
+					{% endif %}
 				</div>
 		</div>
 	</div>
